# stelvio

./: .gitignore  BUILD.md  BUILDING_QUICKSTART.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYOXIDIZER_FROM_SOURCE.md  README.md  README_BINARIES.md  build-binaries  context7.json  mkdocs.yml  posts.md  pyoxidizer.bzl  pyproject.toml  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json  setup  setup.conf
.devcontainer/py3.11/: devcontainer.json
.devcontainer/py3.12/: Dockerfile  devcontainer.json
.devcontainer/py3.13/: devcontainer.json
.devcontainer/py3.14/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docker.yml  cleanup-devcontainer.yml  integration-tests.yml  main.yml  prebuild-devcontainer.yml  release.yml  split-templates.yml
_tunnel/findings/: ai.analysis.sst.md  findings.md
_tunnel/stlvapp/: .gitignore  HOWTO.md  README.md  requirements.txt  stlv_app.py  test_system.py  watch_stream.py  watch_stream.sh  websocket_client.py  ws.py  ws_client.py
_tunnel/stlvapp-tunnel/: DEMO.md  QUICKSTART.sh  README.md  curl.sh  demo_broadcast.py  demo_broadcast.sh  iot_public_broadcast_ws.py  stlv_app.py  test_e2e.py  test_integration.py  test_iot_sdk.py
_tunnel/stlvapp-tunnel/.stelvio/: appname
_tunnel/stlvapp-tunnel/functions/: incoming.py
_tunnel/stlvapp/.stelvio/: appname
_tunnel/stlvapp/functions/: api.py  echo_processor.py  incoming.py  requirements.txt  stlv_resources.py
docs/: changelog.md  index.md
docs/docs/: index.md
docs/docs/concepts/: customization.md  dev-mode.md  dns.md  environments.md  linking.md  state.md  stelvio-app.md  tags.md
docs/docs/intro/: index.md  project-structure.md  quickstart.md  troubleshooting.md  using-cli.md
docs/getting-started/: quickstart.md
docs/guides/: api-gateway.md  appsync.md  cloudfront-router.md  cognito.md  cron.md  customization.md  dns.md  dynamo-db.md  email.md  environments.md  lambda.md  linking.md  project-structure.md  queues.md  s3.md  state-and-infrastructure.md  state.md  stelvio-app.md  stlv-dev.md  tags.md  topics.md  troubleshooting.md  using-cli.md
docs/proposals/cognito/: api-design.md  implementation.md  user-docs.md
docs2/: zensical.toml
docs2/docs/concepts/: customization.md  linking.md
docs2/docs/intro/: project-structure.md
examples/br/: disable_bedrock_actions.sh  invoke.py  stlv_app.py  test_agent.json  test_agent.py  test_lambda_event.json
examples/br/.stelvio/: appname
examples/br/agents/: get_current_time.py
examples/router/: stlv_app.py  test.sh
examples/router/functions/: hello.py  simple.py
examples/s3-static-mkdocs/: .gitignore  mkdocs.yml  stlv_app.py
examples/s3-static-mkdocs/docs/: about.md  index.md
examples/s3-static-pelican/: .gitignore  pelicanconf.py  stlv_app.py
pkg/docker/: Dockerfile
pkg/npm/: LICENSE  README.md  index.ts  package.json  tsconfig.json
pulumi-tmpl/: Pulumi.yaml  __main__.py  requirements.txt  stlv_app.py
stelvio/: __init__.py  _suppress_grpc.py  app.py  aws_home.py  command_run.py  component.py  config.py  context.py  customize.py  dns.py  exceptions.py  git.py  home.py  link.py  passphrase.py  project.py  provider.py  pulumi.py  pulumi_compat.py  rich_deployment_diffs.py  rich_deployment_format.py  rich_deployment_handler.py  rich_deployment_model.py  stack_outputs.py  state_ops.py
stelvio/aws/: __init__.py  acm.py  api_gateway.py  appsync.py  cloudfront.py  cors.py  cron.py  dns.py  dynamo_db.py  email.py  function.py  layer.py  permission.py  queue.py  s3.py  topic.py  types.py  vpc.py
stelvio/aws/_packaging/: __init__.py  dependencies.py
stelvio/aws/api_gateway/: __init__.py  _validators.py  api.py  config.py  constants.py  cors.py  deployment.py  iam.py  routing.py
stelvio/aws/appsync/: __init__.py  appsync.py  codegen.py  config.py  constants.py  data_source.py  file_inputs.py  resolver.py
stelvio/aws/bedrock/: agents.py
stelvio/aws/cloudfront/: __init__.py  cloudfront.py  dtos.py  js.py  router.py
stelvio/aws/cognito/: __init__.py  identity_pool.py  identity_provider.py  types.py  user_pool.py  user_pool_client.py
stelvio/aws/function/: __init__.py  config.py  constants.py  dependencies.py  function.py  iam.py  naming.py  packaging.py  resources_codegen.py
stelvio/bridge/: _chunking.py
stelvio/cli/: __init__.py  commands.py  init_command.py  json_output.py  main.py  state_rendering.py
stelvio/cloudflare/: dns.py
stelvio/tunnel/: protocol.py  ws.py  ws_app.py
templates/base/: main.py  stlv_app.py
tests/: cli_test_helpers.py  conftest.py  test_cleanup_aws.py  test_cli_exit_codes.py  test_cli_outputs.py  test_cli_state_list.py  test_command_run.py  test_component.py  test_config.py  test_context.py  test_git.py  test_init_command.py  test_link.py  test_parse_template.py  test_provider.py  test_pulumi.py  test_pulumi_compat.py  test_rich_deployment_handler.py  test_stack_outputs.py  test_state_ops.py  test_type_urns.py  test_utils.py
tests/aws/: conftest.py  pulumi_mocks.py  subscription_test_helpers.py  test_cloudfront.py  test_cron.py  test_customization.py  test_customization_sync.py  test_global_customization.py  test_keyword_only_constructor_params.py  test_layer.py  test_permission.py  test_tagging_contract.py  test_topic.py
tests/bridge/: test_chunking.py  test_dev_infra.py  test_dev_server.py  test_stub.py
tests/integration/: assert_helpers.py  cleanup.py  cleanup_aws.py  conftest.py  export_helpers.py  run_all.sh  stelvio_test_env.py  test_api.py  test_app_config.py  test_appsync.py  test_bucket.py  test_cleanup_aws.py  test_cloudfront.py  test_cognito.py  test_cron.py  test_dev_mode.py  test_dns_acm.py  test_dns_cloudfront.py  test_dns_cognito.py  test_dns_cross_region.py  test_dns_email.py  test_dns_router.py  test_dynamo.py  test_email.py  test_function.py  test_http_api.py  test_layer.py  test_linking.py  test_provider.py  test_queue.py  test_router.py  test_s3_static_website.py  test_scenario_api.py  test_scenario_appsync.py  test_scenario_events.py  test_scenario_function.py  test_topic.py
(+173 files in other folders)
