[project]
name = "stelvio"
version = "0.6.1a9"
description = "AWS for Python devs made simple."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Michal Martinka", email = "michal@stelvio.dev" }, { name = "Bas Steins", email = "bas@stelvio.dev" }]
maintainers = [{ name = "Michal", email = "michal@stelvio.dev" }, { name = "Bas Steins", email = "bas@stelvio.dev" }]
keywords = ["aws", "cloudflare", "infrastructure"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pulumi (==3.187.0)",
    "pulumi-aws (==7.2.0)",
    "click",
    "appdirs",
    "requests",
    "rich>=14.0.0",
    "boto3",
    "pulumi-cloudflare==6.4.1",
    "websockets>=15.0.1",
    "awslambdaric>=3.1.1",
]


[dependency-groups]
dev = [
    "pytest >=8.3.4",
    "pytest-cov >=6.0.0",
    "ruff >=0.11.0",
    "mkdocs-material >=9.5.49",
]

[project.scripts]
stlv = "stelvio.cli:cli"

[project.urls]
homepage = "https://stelvio.dev/"
repository = "https://github.com/stelviodev/stelvio"
documentation = "https://stelvio.dev/docs/"
"Bug Tracker" = "https://github.com/stelviodev/stelvio/issues"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.sdist]
include = [
    "/stelvio",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
]

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = ['pulumi-tmpl', 'templates']

# Configure linting
[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP", "C4", "A", "S", "ARG", "LOG", "G", "PIE", "T20", "PYI",
    "PT", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID", "TC", "PTH", "FLY", "C90", "PERF", "W",
    "PGH", "PL", "FURB", "RUF", "TRY", "INP", "ANN"
    # "D" - will need, defo need to work on more docs
]
ignore = ['TRY003']
# Allow autofix for all enabled rules (when `--fix` is passed)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

# Sort imports
[tool.ruff.lint.isort]
known-first-party = ["stelvio"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "T20", # asserts allowed in tests
    "SLF", # protected access allowed in tests
    "TID", # allow relative imports in tests
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant
    "D", # No need to check docstrings in tests
    "PLR2004",
    "ANN"
]
"tests/aws/sample_test_project/**/*.py" = ["INP"]

