[project]
name = "stelvio"
version = "0.7.1b1"
description = "AWS for Python devs made simple."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Michal Martinka", email = "michal@stelvio.dev" }, { name = "Bas Steins", email = "bas@stelvio.dev" }]
maintainers = [{ name = "Michal", email = "michal@stelvio.dev" }, { name = "Bas Steins", email = "bas@stelvio.dev" }]
keywords = ["aws", "cloudflare", "infrastructure"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pulumi==3.216.0",
    "pulumi-aws==7.16.0",
    "pulumi-cloudflare==6.12.0",
    "click>=8.0,<9",
    "appdirs>=1.0,<2",
    "requests>=2.0,<3",
    "rich>=14.0,<15",
    "boto3>=1.0,<2",
    "websockets>=15.0,<17",
    "awslambdaric>=3.0,<4",
]


[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "ruff>=0.14,<1",
    "mkdocs-material>=9.0,<10",
]

[project.scripts]
stlv = "stelvio.cli:cli"

[project.urls]
homepage = "https://stelvio.dev/"
repository = "https://github.com/stelviodev/stelvio"
documentation = "https://stelvio.dev/docs/"
"Bug Tracker" = "https://github.com/stelviodev/stelvio/issues"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.sdist]
include = [
    "/stelvio",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
]

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = ['pulumi-tmpl', 'templates']

# Configure linting
[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP", "C4", "A", "S", "ARG", "LOG", "G", "PIE", "T20", "PYI",
    "PT", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID", "TC", "PTH", "FLY", "C90", "PERF", "W",
    "PGH", "PL", "FURB", "RUF", "TRY", "INP", "ANN"
    # "D" - will need, defo need to work on more docs
]
ignore = ['TRY003']
# Allow autofix for all enabled rules (when `--fix` is passed)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

# Sort imports
[tool.ruff.lint.isort]
known-first-party = ["stelvio"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "T20", # asserts allowed in tests
    "SLF", # protected access allowed in tests
    "TID", # allow relative imports in tests
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant
    "D", # No need to check docstrings in tests
    "PLR2004",
    "ANN",
    "PLC0415", # inline imports needed for test isolation and delayed setup after mocks/env
]
"tests/aws/sample_test_project/**/*.py" = ["INP"]

